# chai_sql

./: .gitignore  404.html  BACKLOG.md  LICENSE.md  Makefile  README.md  chai_sql.code-workspace  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: check_python.yml  deploy_docs.yml
1.-Typing-basic-SQL-fragment/: index.html
2.-Type-annotation-syntax/: index.html
3.-Specifying-DB-schemas/: index.html
4.-Python-package/: index.html
chai_sql/: models.py  sql_parser.py
chai_sql/actions/: type_check.py
chai_sql/query/: sql_parser.py
chai_sql/shared/: arpeggio_parser_wrapper.py
chai_sql/sql/: query_parser.py  schema_loader.py
chai_sql/typing/: type_parser.py
data/: bootstrap.sql  queries.sql  queries_annotated.sql
docs/: Makefile  README.md  index.md  mkdocs.yml  pyproject.toml
docs/1.-Basic-SQL-fragment/: index.md
docs/2.-Type-annotation-syntax/: index.md
docs/3.-Simple-DB-schemas/: index.md
docs/Python-package/: index.md
docs/Type-annotations/: index.md
docs/Type-system/: infex.md
docs/basic-sql/: index.md
docs/basic-sql-fragment/: basic-sql.abnf  index.md
docs/hci-materials/: README.md
docs/src/: index.md
docs/src/.skip-3.-Type-system-reference/: index.md  sql-to-chai-sql.uxf
docs/src/1.-Typing-basic-SQL-fragment/: index.md
docs/src/2.-Type-annotation-syntax/: index.md
docs/src/3.-Simple-DB-schemas/: index.md
docs/src/3.-Specifying-DB-schemas/: index.md
resources/: queries.sql
test_grammars/: grammar_tester.py
tests/: __index__.py
tests/sql/: test_query_parser.py  (+1 more)
(+5 files in other folders)
