[tool.poetry]
name = "typed_sql"
version = "0.1.0"
description = ""
authors = ["Dmitrii Orlov <dmtree.dev@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
