[tool.poetry]
authors = ["Dmitrii Orlov <dmtree.dev@yahoo.com>"]
description = ""
name = "typed_sql"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
sqlparse = "^0.4.3"
abnf = "^2.0.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.1"
mkdocs = "^1.4.2"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material = "^8.5.10"
pytest = "^7.2.0"
mypy = "^0.991"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"
