[tool.poetry]
name = "chai-sql-docs"
version = "0.1.0"
description = "Documentation distribution for ChaiSQL"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chai_sql_docs"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material = "^8.5.10"
mdx-truly-sane-lists = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
